@@ -1,5 +1,8 @@
 __author__ = 'twi'
 
+items = list()
+verbose = False
+
 def setContent(handle, type):
     pass
 
@@ -7,7 +10,11 @@ def setPluginCategory(handle, category):
     pass
 
 def addDirectoryItem(handle, url, item, isDirectory):
-    pass
+    item.url = url
+    items.append(item)
+    if(verbose):
+        print "ListItem: %s" % item.title
+        print "\turl: %s" % item.url
 
 def endOfDirectory(handle):
     pass
