@@ -1,5 +1,8 @@
 [B]Version WIP[/B]
 - Added tests and initial stub version of xbmc module to allow execution of tests outside of XBMC
+- Added init() method
+- When using this module you must import each module separately instead of 'from danishaddons import *'
+    and explictly call danishaddons.init() before ADDON_* constants are available
 
 [B]Version 1.0.5[/B]
 - Changes version number to (hopefully) force download
